Fix issue with navbar covering main container.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,3 +5,7 @@
 @import "tasks";
 @import "dashboard";
 @import "lists";
+
+body {
+  padding-bottom: 70px;
+}
